--- a/packages/frontend-presentation/deck.mdx
+++ b/packages/frontend-presentation/deck.mdx
@@ -24,11 +24,12 @@ import { Head } from 'mdx-deck'
 </div>
 
 ---
-#### 🤑 ¡Qué tienen mucho money!
+#### 🤑 ¡Qué mueven mucho dinero!
 <img src='./assets/dinero.gif' width='400' />
 
 ---
-## Cierto. Pero hay más... 🧐
+## Cierto. ✅
+## Pero hay más... 🧐
 
 ---
 ## Todos usan React ⚛️
@@ -145,7 +146,7 @@ import {Author} from './components/Author.js'
 
 ---
 # Imperativo
-## Coge tu móvil. 📱 Marca el teléfono del restaurante. 📲. Pide dos nigiris y dos uramakis. 🍣 Dile tu dirección. 🏠 Espera 20 minutos. ⏲ Atiende la puerta. 🚪 Paga al repartidor. 💵 No seas ratilla, dale propina. 🐀 Lleva la bolsa con la cena al comedor y ábrela. 🛍 Situa la comida en la mesa. 🍱 Coge los palillos. Cogelos bien. Bueno, pues coge un tenedor. 🍴 Come. 🤭
+#### Coge tu móvil. 📱 Marca el teléfono del restaurante. 📲. Pide dos nigiris y dos uramakis. 🍣 Dile tu dirección. 🏠 Espera 20 minutos. ⏲ Atiende la puerta. 🚪 Paga al repartidor. 💵 No seas ratilla, dale propina. 🐀 Lleva la bolsa con la cena al comedor y ábrela. 🛍 Situa la comida en la mesa. 🍱 Coge los palillos. Cogelos bien. Bueno, pues coge un tenedor. 🍴 Come. 🤭
 
 ---
 # Declarativo
@@ -171,8 +172,7 @@ container.appendChild(btn)
 ---
 ## 2️⃣ React está basado en componentes<br /><br />
 
-### separamos nuestra interfaz en pequeñas partes
-### que la hacen sencilla, predictiva y reusable
+### nuestra interfaz en pequeñas partes que la hacen sencilla, predictiva y reusable
 
 ---
 <img src='./assets/uimockscript.png' width='800' />
@@ -247,14 +247,13 @@ function Hello () { // un componente es una función! 👀
 </script>
 ```
 ---
-## Renderizamos nuestro componente en la página
-## usando ReactDOM
+## Renderizamos nuestro componente en la página usando ReactDOM
 ```html
 <script>
   ReactDOM.render(
-    React.createElement(Hola), // el elemento a renderizar
-    document.getElementById("contenedor-app") // dónde lo renderizamos
-  );
+    React.createElement(Hola),  // el qué
+    document.getElementById("contenedor-app") // dónde
+  )
 </script>
 ```
 ---
@@ -270,6 +269,8 @@ function Hello () { // un componente es una función! 👀
 ### y si tuvieramos que añadir más niveles...
 
 ---
+<div style={{ fontSize: '24px'}}>
+
 ```javascript
 function Hello() {
   return React.createElement(
@@ -288,6 +289,8 @@ function Hello() {
   )
 }
 ```
+</div>
+
 ---
 <img src='./assets/feo.gif' width='500' />
 
@@ -296,19 +299,20 @@ function Hello() {
 # ¡JSX al rescate! 🦸‍♀️
 <img src='./assets/jsx.png' width='500' />
 ---
-## Tu primer componente con JSX
-```javascript
-function Hello () {
-  return <h1>Hola Mundo 👋🌍!</h1>
-}
-```
----
 ## JSX es azucar sintáctico * 🍨
 ### · creada por Facebook
 ### · extiende Javascript para su uso con React
 ### · NO ES HTML!<br />
 
 ###### * añadidos a la sintaxis de un lenguaje de programación<br />diseñados para hacer algunas construcciones más fáciles de leer o expresar.
+---
+## Tu primer componente con JSX
+```javascript
+function Hello () {
+  return <h1>Hola Mundo 👋🌍!</h1>
+}
+```
+
 ---
 ## Comparación con y sin JSX
 ```javascript
@@ -324,7 +328,7 @@ function Hello () { // sin jsx
   )
 }
 ```
-#### ambas, son lo mismo
+#### ambas, son lo mismo 👯‍♀️
 ---
 ## Revisemos en tiempo real 🕵️‍♂️
 <a rel='noopener' target='_blank' href='https://babeljs.io/en/repl.html#?babili=false&browsers=&build=&builtIns=false&spec=false&loose=false&code_lz=GYVwdgxgLglg9mABACQKYBt10QCgJSIDeAUIogE6pQjlIA8AJjAG4B8dAFgIzsDOADgEMwrZHHSC6AegHDWiALLgGcad3ZSmbYgF9EQA&debug=false&forceAllTransforms=false&shippedProposals=false&circleciRepo=&evaluate=false&fileSize=false&timeTravel=false&sourceType=module&lineWrap=true&presets=es2015%2Creact%2Cstage-2&prettier=false&targets=&version=6.26.0&envVersion='>Babel REPL</a>
@@ -333,7 +337,10 @@ function Hello () { // sin jsx
 <img src='./assets/livecoding.gif' width='550' />
 
 ##### Crear componente `<RandomAvatar size='100' />`
+###### usando servicio `http://i.pravatar.cc/100`
 <a href='https://codesandbox.io/dashboard/recent' target='_blank' rel='noopener'>Code Sandbox</a>
+
+
 
 ---
 ## Todavía quedan muchas cosas...
@@ -366,6 +373,7 @@ http://bit.ly/react-gratis
 
 ---
 # ¡Gracias! 🙇‍♂️
-### ¿Alguna pregunta?
+### ¿Alguna pregunta?<br />¿Os puedo ayudar en algo?
 ## <br />
 #### Curso 💸 👨‍🏫 ⚛️<br />http://bit.ly/react-gratis
+#### Twitter<br />@midudev
